# humanoids-project

./: .gitmodules
image_capture/: CMakeLists.txt  image_capture.cpp
notes/: compiling with libpixyusb.txt
optical_flow_python/: asfasd.py  backgroundSub.py  colorVolume.py  grabcolor.py  iteration2.py  teaching.py  test.py  testststet.py  tt.py  tttt.py
pixy_test/: CMakeLists.txt  pixy_test.cpp
samples/cpp/: Makefile  cv2-capture.cpp  cv2-convert-to-gray.cpp  cv2-mat.cpp  cv2-mat2.cpp  gen_disp_better.cpp  gen_disparity.cpp
samples/python/: cv2-capture.py
